--- a/pythonarduinoserial/resources/c_header.h.j2
+++ b/pythonarduinoserial/resources/c_header.h.j2
@@ -32,7 +32,7 @@ namespace {{ namespace }} {
 
         enum DataTypeCode : int {
             {% for name in structs_names -%}
-            {{ name }},
+            {{ name }}Code,
             {%- endfor %}
         };
 
