--- a/pythonarduinoserial/resources/c_header.h.j2
+++ b/pythonarduinoserial/resources/c_header.h.j2
@@ -36,7 +36,8 @@ namespace {{ namespace }} {
 
         enum DataTypeCode : int {
             {% for name in structs_names -%}
-            {{ name }}Code,
+            {{ name }}Code{{ ",
+            " if not loop.last }}
             {%- endfor %}
         };
 
@@ -47,7 +48,8 @@ namespace {{ namespace }} {
 
     const std::map<SerialProtocol::DataTypeCode, uint16_t> SerialProtocol::DataSize = {
         {% for name in structs_names -%}
-        {SerialProtocol::DataTypeCode::{{ name }}Code, sizeof(SerialProtocol::{{  name }})},
+        {SerialProtocol::DataTypeCode::{{ name }}Code, sizeof(SerialProtocol::{{  name }})}{{ ",
+        " if not loop.last }}
         {%- endfor %}
     };
 }
